fix: finally fixing the goddamn heading tracker
positive value in `rootMargin` will actually extend the viewport bound,
resulting in invisible element included in observer results, as though
it was a visible element.

then, all we need to do is flip the sign and bam.

also, some change to `@Elements/DocumentView`:

* change `activeHeading` to store the elements instead

* only highlight the first active heading

--- a/src/components/elements/DocumentView.styl
+++ b/src/components/elements/DocumentView.styl
@@ -6,7 +6,7 @@
 
 #main-article {
   h2 {
-    @apply text-lg tracking-widest py-5 font-bold scroll-mt-header;
+    @apply text-lg tracking-widest py-5 font-bold;
 
     &:first-child {
       @apply pt-0;
